@@ -1,6 +1,6 @@
 Summary: spmfilter - mail filtering framework
 Name: spmfilter
-Version: 0.4.0
+Version: 0.4.1
 Release: 1%{?dist}
 License: LGPL
 Group: Development/Libraries
